--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "darkaonline/swagger-lume": "7.*",
         "flipbox/lumen-generator": "^7.0",
         "laravel/lumen-framework": "^7.0"
     },
